fix some text align and spacing issue

--- a/less/boxmenu.less
+++ b/less/boxmenu.less
@@ -174,6 +174,7 @@
 	.menu-item-title-inner.h3, .menu-item-body-inner{
 		color: @black !important;
 		font-weight: bold;
+    text-align: center;
 	}
 
 	.menu-graphic a {
