--- a/less/carousel-menu.less
+++ b/less/carousel-menu.less
@@ -37,6 +37,8 @@
 	.menu-body {
 		margin: @menu-block-body-margin-bottom 0;
 		color: @foreground-color-inverted;
+    background-color: rgba(0,0,0,0.5);
+    padding: 20px 0;
 	}
 
 	.menu-item {
